RESOLVED FIXED31005
Latest WebKit build (= r50383 ) breaks the WebGL Interface
https://bugs.webkit.org/show_bug.cgi?id=31005
Summary Latest WebKit build (= r50383 ) breaks the WebGL Interface
jbehr
Reported 2009-11-02 02:08:25 PST
The latest build (= 50383) breaks the WebGL Interface. The Object and Exception structure do not match anymore. Even the demos (with textures ) on the webkit.org do not work anymore Breaks also the x3dom project http://webkit.org/blog-files/webgl/SpiritBox.html http://webkit.org/blog/603/webgl-now-available-in-webkit-nightlies/ http://www.x3dom.org regards johannes
Attachments
Patch with revised test cases (13.03 KB, patch)
2009-11-02 15:26 PST, Chris Marrin
oliver: review+
Chris Marrin
Comment 1 2009-11-02 13:09:58 PST
Looks like the new checks are not handling the unbind case (passing 0 in place of the buffer pointer). Easy to fix...
Chris Marrin
Comment 2 2009-11-02 15:26:20 PST
Created attachment 42347 [details] Patch with revised test cases I revised the test cases so they work under the new rules. I am also now always passing valid flags to all the binding functions. This ensures that we are always testing the error condition and it does not get hidden by a parameter validation error.
Oliver Hunt
Comment 3 2009-11-02 15:28:54 PST
Comment on attachment 42347 [details] Patch with revised test cases r=me
Chris Marrin
Comment 4 2009-11-02 16:04:51 PST
Sending LayoutTests/ChangeLog Sending LayoutTests/fast/canvas/webgl/incorrect-context-object-behaviour-expected.txt Sending LayoutTests/fast/canvas/webgl/null-object-behaviour-expected.txt Sending LayoutTests/fast/canvas/webgl/script-tests/incorrect-context-object-behaviour.js Sending LayoutTests/fast/canvas/webgl/script-tests/null-object-behaviour.js Sending WebCore/ChangeLog Sending WebCore/html/canvas/CanvasRenderingContext3D.cpp Sending WebCore/platform/graphics/mac/GraphicsContext3DMac.cpp Transmitting file data ........ Committed revision 50432.
Note You need to log in before you can comment on or make changes to this bug.