        Exception checks were being too aggressive         https://bugs.webkit.org/show_bug.cgi?id=31005

Several calls in CanvasRenderingContext3D are allowed to
        have a null value passed, which indicated that the
        object is being unbound. Handle this case and the corresponding
        null handling in GraphicsContext3DMac.



Canonical link: https://commits.webkit.org/41865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50432 268f45cc-cd09-0410-ab3c-d52691b4dbfc