WebCore/html/canvas/CanvasRenderingContext3D.cpp
@@ -151,7 +151,7 @@ void CanvasRenderingContext3D::bindAttribLocation(CanvasProgram* program, unsign
 
 void CanvasRenderingContext3D::bindBuffer(unsigned long target, CanvasBuffer* buffer, ExceptionCode& ec)
 {
-    if (!buffer || buffer->context() != this) {
+    if (buffer && buffer->context() != this) {
         ec = TYPE_MISMATCH_ERR;
         return;
     }
@@ -162,7 +162,7 @@ void CanvasRenderingContext3D::bindBuffer(unsigned long target, CanvasBuffer* bu
 
 void CanvasRenderingContext3D::bindFramebuffer(unsigned long target, CanvasFramebuffer* buffer, ExceptionCode& ec)
 {
-    if (!buffer || buffer->context() != this) {
+    if (buffer && buffer->context() != this) {
         ec = TYPE_MISMATCH_ERR;
         return;
     }
@@ -172,7 +172,7 @@ void CanvasRenderingContext3D::bindFramebuffer(unsigned long target, CanvasFrame
 
 void CanvasRenderingContext3D::bindRenderbuffer(unsigned long target, CanvasRenderbuffer* renderBuffer, ExceptionCode& ec)
 {
-    if (!renderBuffer || renderBuffer->context() != this) {
+    if (renderBuffer && renderBuffer->context() != this) {
         ec = TYPE_MISMATCH_ERR;
         return;
     }
@@ -183,7 +183,7 @@ void CanvasRenderingContext3D::bindRenderbuffer(unsigned long target, CanvasRend
 
 void CanvasRenderingContext3D::bindTexture(unsigned long target, CanvasTexture* texture, ExceptionCode& ec)
 {
-    if (!texture || texture->context() != this) {
+    if (texture && texture->context() != this) {
         ec = TYPE_MISMATCH_ERR;
         return;
     }
@@ -489,7 +489,7 @@ void CanvasRenderingContext3D::flush()
 
 void CanvasRenderingContext3D::framebufferRenderbuffer(unsigned long target, unsigned long attachment, unsigned long renderbuffertarget, CanvasRenderbuffer* buffer, ExceptionCode& ec)
 {
-    if (!buffer || buffer->context() != this) {
+    if (buffer && buffer->context() != this) {
         ec = TYPE_MISMATCH_ERR;
         return;
     }       
@@ -499,7 +499,7 @@ void CanvasRenderingContext3D::framebufferRenderbuffer(unsigned long target, uns
 
 void CanvasRenderingContext3D::framebufferTexture2D(unsigned long target, unsigned long attachment, unsigned long textarget, CanvasTexture* texture, long level, ExceptionCode& ec)
 {
-    if (!texture || texture->context() != this) {
+    if (texture && texture->context() != this) {
         ec = TYPE_MISMATCH_ERR;
         return;
     }
